--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^8.1.4",
     "astro": "^5.7.12",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "postcss": "^8.5.3"
   }
 }
