--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.4",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.7.13",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1"
