--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@astrojs/vercel": "^8.1.4",
     "@vercel/analytics": "^1.5.0",
     "astro": "^5.7.13",
+    "hast-util-from-html": "^2.0.3",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1"
   },
