--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.7",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.4",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
     "astro": "^5.7.13",
     "hast-util-from-html": "^2.0.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1"
   },
